# ph-gazette-scraper

./: .gitignore  README.md  pyproject.toml
backend/common/: logging.py
backend/pipeline/scraper/: __main__.py  browser_client.py  cli.py  http_client.py  masterlist_cli.py  masterlist_parsers.py  masterlist_scraper.py  masterlist_storage.py  models.py  parsers.py  pdf_extractor.py  sona_scraper.py  storage.py
data/documents-raw/masterlist/: manifest.json
data/documents-translated/administrative-orders/benigno-s-aquino-iii/: administrative-order-no-1-s-2010.txt  administrative-order-no-11-s-2011.txt  administrative-order-no-12-s-2011.txt  administrative-order-no-13-s-2011.txt  administrative-order-no-14-s-2011.txt  administrative-order-no-15-s-2011.txt  administrative-order-no-20-s-2011.txt  administrative-order-no-21-s-2011.txt  administrative-order-no-23-s-2011.txt  administrative-order-no-27-s-2012.txt  administrative-order-no-30-s-2012.txt  administrative-order-no-31-s-2012.txt  administrative-order-no-35-s-2012.txt  administrative-order-no-4-s-2010.txt  administrative-order-no-42-s-2014.txt  administrative-order-no-44-s-2014.txt  administrative-order-no-45-s-2014.txt  (+5 more)
tests/fixtures/: masterlist_content_fulltext.html  masterlist_content_pdfonly.html  masterlist_results_page.html  sona_index_snippet.html  sona_page_historical.html  sona_page_modern.html
tests/pipeline/scraper/: test_browser_client.py  test_http_client.py  test_masterlist_parsers.py  test_masterlist_storage.py  test_models.py  test_parsers.py  test_pdf_extractor.py  test_storage.py
(+106457 files in other folders)
