[project]
name = "ph-gazette-scraper"
version = "0.1.0"
description = "Scraper for Philippine presidential documents from the Official Gazette"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.49",
    "pydantic>=2.0",
    "tenacity>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[project.scripts]
talasuri-scrape-sona = "backend.pipeline.scraper.cli:main"
talasuri-scrape-masterlist = "backend.pipeline.scraper.masterlist_cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
